--- a/css/styles.css
+++ b/css/styles.css
@@ -241,6 +241,7 @@ a {
 }
 a:hover {
   color: #212cc0;
+  font-size: 17px;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -7649,7 +7650,7 @@ textarea.form-control-lg {
 }
 
 .lh-1 {
-  line-height: 1 !important;
+  line-height: 1 
 }
 
 .lh-sm {
@@ -7762,7 +7763,8 @@ textarea.form-control-lg {
 
 .text-white {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+  color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
+  
 }
 
 .text-body {
@@ -7939,7 +7941,8 @@ textarea.form-control-lg {
 }
 
 .rounded-circle {
-  border-radius: 50% !important;
+  border-radius: 20px !important;
+  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.2);
 }
 
 .rounded-pill {
@@ -11296,7 +11299,7 @@ html {
 }
 
 .bg-gradient-primary-to-secondary {
-  background: linear-gradient(45deg, #2937f0, #9f1ae2) !important;
+  background-color:  #82C8FA !important;
 }
 
 .font-alt {
@@ -11319,10 +11322,13 @@ section {
 .app-badge {
   height: 3rem;
 }
-
+ 
+.logo{
+  height: 75px;
+  width: auto;
+}
 #mainNav {
   padding-top: 1rem;
-  padding-bottom: 1rem;
   background-color: #fff;
 }
 #mainNav .navbar-brand {
@@ -11337,10 +11343,12 @@ section {
   color: #212529;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
-  color: #212529;
+  color: #31A1F1;
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #6c757d;
+  color: #2A85C6;
+  font-weight: bold;
+  
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
   color: #2937f0;
@@ -11538,11 +11546,130 @@ footer a:hover, footer a:active, footer a:focus {
   text-decoration: underline;
 }
 
-.masthead {
-  background-color: #f8f9fa;
+.homepage-hero {
+
   padding-top: 9.5rem;
   padding-bottom: 5rem;
+  background-image: url(/assets/img/vrhands.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: auto;
+  height: 100vh;
+  
+  
+  
+  
 }
+
+.hero-text-container{
+  margin-top: 150px;
+  margin-left: 185px;
+  border: none;
+  background-color: white;
+  border-radius: 200px;
+  text-align: center;
+  padding: 38px;
+  width: 300px;
+  
+  
+  
+  
+  
+}
+
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {
+  .homepage-hero {
+    background-size: cover; /* Cover the entire hero section */
+    background-position: center; /* Center the image */
+    height: 100vh; /* Adjust the height as needed */
+  }
+  
+  
+  /* CSS */
+  
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .homepage-hero {
+    background-size: cover; /* Cover the entire hero section */
+    background-position: center; /* Center the image */
+    height: 100vh; /* Adjust the height as needed */
+  }
+  /* CSS */
+  
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .homepage-hero {
+    background-size: cover; /* Cover the entire hero section */
+    background-position: center; /* Center the image */
+    height: 100vh; /* Adjust the height as needed */
+  }
+  /* CSS */
+  
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .homepage-hero {
+    background-size: cover; /* Cover the entire hero section */
+    background-position: center; /* Center the image */
+    height: 100vh; /* Adjust the height as needed */
+  }
+  /* CSS */
+  
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .homepage-hero {
+    background-size: cover; /* Cover the entire hero section */
+    background-position: center; /* Center the image */
+    height: 100vh; /* Adjust the height as needed */
+  }
+  /* CSS */
+  
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+   .homepage-hero {
+    background-size: cover; /* Cover the entire hero section */
+    background-position: center; /* Center the image */
+    height: 100vh; /* Adjust the height as needed */
+  }
+  /* CSS */
+  
+}
+
 .masthead .masthead-device-mockup {
   display: flex;
   align-items: center;
