trying to make background image in css display in github pages
changing the file path to see if it displays

--- a/css/styles.css
+++ b/css/styles.css
@@ -11550,7 +11550,7 @@ footer a:hover, footer a:active, footer a:focus {
 
   padding-top: 9.5rem;
   padding-bottom: 5rem;
-  background-image: url(/assets/img/vrhands.jpg);
+  background-image: url(../assets/img/vrhands.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
