--- a/css/styles.css
+++ b/css/styles.css
@@ -4233,6 +4233,7 @@ textarea.form-control-lg {
   }
   .navbar-expand-lg .navbar-nav {
     flex-direction: row;
+    margin: 0 auto;
   }
   .navbar-expand-lg .navbar-nav .dropdown-menu {
     position: absolute;
@@ -11760,6 +11761,8 @@ footer a:hover, footer a:active, footer a:focus {
   font-size: 23px;
   width: 1400px;
   height: 200px;
+  margin: 0 auto;
+  width: 500px;
 }
 
 .vid-des-ur{
@@ -11774,6 +11777,11 @@ footer a:hover, footer a:active, footer a:focus {
 
 
 /* --------------------wellness section  ---------------------- */
+
+.welness-container{
+  background-color:#F1F1F1 ;
+}
+
 .wellness-header{
   font-weight: bold;
   font-size: 50px;
@@ -11786,11 +11794,8 @@ footer a:hover, footer a:active, footer a:focus {
 /* -------- */
 
 
-
 /* --------------------explore section  ---------------------- */
-.explore_section{
-  
-}
+
 
 .explore_boxes{
   display: flex;
@@ -11989,9 +11994,10 @@ i {
 
 
 
+
 /*menu mobile*/
 
-@media only screen and (max-width: 990px) {
+@media only screen and (min-width: 100px) {
  
   .body{
     margin: 0;
@@ -12016,7 +12022,7 @@ i {
   */
 
   #mainNav{
-    padding: 20px;
+    padding: 40px;
   }
 
   .logo{
@@ -12035,7 +12041,6 @@ i {
 
   #mainNav .navbar-nav .nav-item .nav-link {
     color: black;
-    font-size: 2rem;
   }
   
   /*hero section*/
@@ -12070,7 +12075,7 @@ i {
   /*about this guide*/
   .bg-gradient-primary-to-secondary1{
     width: 371px;
-    height: 353px;
+    height: 250px;
   }
 
 
@@ -12121,10 +12126,8 @@ i {
   /*------------------------more-info-sec*/
   .more-info-sec{
     text-align: center;
-    background-color: #F1F1F1;
-    margin: 23px;
+    margin:0px 23px 23px 23px;
     border-radius: 18px;
-    padding: 6px;
   }
 
   .wellness-header{
@@ -12164,9 +12167,54 @@ i {
 }
 
 
+@media only screen and (min-width: 500px) {
+  .homepage-hero {
+    height: 360px;
+  }
+  .hero-section {
+    margin: 92px;
+    position: relative;
+    top: -170px;
+  }
+
+  .bg-gradient-primary-to-secondary1 {
+    width: 450px;
+}
+
+.container-about-this-guide p {
+  width: 400px;
+}
+
+}
+
+@media only screen and (min-width: 600px) {
+
+  .hero-section {
+    margin: 92px;
+    position: relative;
+    top: -170px;
+  }
+
+
+  .homepage-hero {
+    height: 360px;
+    
+}
+
+.container-about-this-guide p{
+  width: 440px;
+}
+
+.bg-gradient-primary-to-secondary1 {
+  width: 500px;
+}
+
+}
+
+
 
 /*tablet version --------------------------------------*/
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 758px) {
   .hero-section {
     margin: 92px;
     position: relative;
@@ -12185,11 +12233,13 @@ i {
   .homepage-hero {
     height: 416px;
 }
-
+  
   .bg-gradient-primary-to-secondary1 {
     width: 674px;
   }
+  
 
+  
   .container-about-this-guide h2 {
     font-size: 66px;
     width: 520px;
@@ -12216,13 +12266,10 @@ iframe {
   margin: 0 35px;
 }
 
-.more-info-sec {
-  
-  margin: 0 auto;
- 
-  height: 522px;
-  width: 578px;
-}
+  .more-info-sec{
+    display: flex;
+  }
+
 .wellness_img_homepage {
   width: 613px;
   height: 522px;
@@ -12243,6 +12290,120 @@ iframe {
 }
 
 
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 1100px) {
+  .bg-gradient-primary-to-secondary1{
+    width: 850px;
+    height: 400px;
+  }
+
+  .homepage-hero {
+    height: 600px;
+}
+
+.bs-container{
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.welness-container{
+  width: 570px;
+  height: 451px;
+  margin: 0  auto;
+  justify-content: center;
+  border-radius: 10px;
+}
 
 }
+
+
+@media only screen and (min-width: 1200px) {
+
+  .bs-container{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+  }
+  
+  
+  .video-description{
+    width: 500px;
+  }
+  
+  .welness-container{
+   
+      width: 713px;
+      height: 563px;
+      border-radius: 10px;
+      min-width: 384px;
+      padding: 20px;
+      margin-top: 17px;
+  }
+  
+  .wellness-p{
+    padding-top: 34px;
+  }
+  
+  .wellness_img_homepage{
+    width: 713px;
+    height: 600px;
+  }
+  
+  .hero-btn{
+    margin: 0;
+    margin-top: 47px;
+  }
+  
+  }
+
+/*desktop*/
+@media only screen and (min-width: 1700px) {
+
+
+  .homepage-hero {
+    height: 100vh;
+  }
+
+  .hero-section{
+    top: -111px;
+    left: 130px 
+  }
+
+  .hero-section h1{
+    font-size: 80px;
+    width: 616px;
+  }
+
+  .hero-btn{
+    padding:17px 38px;
+    margin-top:50px;
+  }
+
+
+  .bg-gradient-primary-to-secondary1 {
+    width: 1500px;
+    height: 900px;
+  }
+
+
+ 
+
+  .container-about-this-guide h2{
+    font-size:128px;
+    width: 1100px;
+    padding-top:123px;
+    padding-left: 73px;
+  }
+
+  .container-about-this-guide p {
+    margin-left: 71px;
+    margin-top: 348px;
+    font-size: 36px;
+    width: 1150px;
+  }
+
+
+  .more-info-sec{
+    display: flex;
+  }
+}
+
